infra/homelab/apps/nocodb/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nocodb
  namespace: nocodb
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: data.ininicho.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nocodb
                port:
                  number: 8080
